--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.7.7",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
-    "next": "15.0.3",
+    "next": "^13.5.7",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind": "^4.0.0",
