--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "^13.5.7",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind": "^4.0.0",
     "zustand": "^5.0.1"
   },
